welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:10: error: type mismatch;
 found   : Unit
 required: Boolean
	return 
        ^Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
while(!estSurBiscuit()){
^