welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
var nbPas=0
def haveBaggle():Boolean = {
def vuBiscuit():Boolean = {
while(!estSurBiscuit()){
	avance();
	nbPas=nbPas+1;
	

	return 
}
}
vuBiscuit();
}
